# Code-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/hooks/: session-start.sh
.github/workflows/: build-windows.yml
benchmarks/: bench_search.cpp  bench_text_buffer.cpp
cmake/: mingw-w64-x86_64.cmake
include/editor/: clipboard.hpp  cursor.hpp  multi_cursor.hpp  selection.hpp  text_buffer.hpp  text_ops.hpp
include/memory/: allocator.hpp
include/search/: search.hpp
include/syntax/: highlighter.hpp
include/ui/: statusbar.hpp  tabs.hpp  window.hpp
include/utils/: config.hpp  file_io.hpp  utf8.hpp
src/: main.cpp
src/asm/: allocator.asm  search_simd.asm  utf8_validate.asm
src/editor/: clipboard.cpp  cursor.cpp  multi_cursor.cpp  selection.cpp  text_buffer.cpp  text_ops.cpp
src/search/: search.cpp
src/syntax/: highlighter.cpp
src/ui/: statusbar.cpp  tabs.cpp  window.cpp
src/utils/: config.cpp  file_io.cpp  profiler.cpp
tests/: test_highlighter.cpp  test_multi_cursor.cpp  test_search.cpp  test_text_buffer.cpp  test_text_ops.cpp
